--- a/pom.xml
+++ b/pom.xml
@@ -13,4 +13,67 @@
      <module>testing</module>
    </modules>
 
+   <build>
+      <resources>
+         <resource>
+           <directory>${basedir}/../application/sql</directory>
+           <filtering>true</filtering>
+           <targetPath>sql</targetPath>
+         </resource>
+         <resource>
+           <directory>${basedir}/../application/src/main/resources</directory>
+         </resource>
+      </resources>      
+      <plugins>
+         <plugin>
+           <groupId>org.apache.maven.plugins</groupId>
+           <artifactId>maven-help-plugin</artifactId>
+         </plugin>
+         <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>properties-maven-plugin</artifactId>
+           <version>1.0-SNAPSHOT</version>
+           <executions>
+             <execution>
+               <phase>initialize</phase>
+               <goals>
+                 <goal>read-project-properties</goal>
+               </goals>
+               <configuration>
+                 <files>
+                   <file>${database.properties.file}</file>
+                 </files>
+               </configuration>
+             </execution>
+           </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>sql-maven-plugin</artifactId>
+            <version>1.1</version>
+            <dependencies>
+               <dependency>
+                  <groupId>mysql</groupId>
+                  <artifactId>mysql-connector-java</artifactId>
+                  <version>5.1.6</version>
+               </dependency>
+            </dependencies>
+            <configuration>
+               <driver>com.mysql.jdbc.Driver</driver>
+               <url><![CDATA[jdbc:mysql://localhost:3306?useUnicode=true&characterEncoding=UTF-8]]></url>
+               <username>root</username>
+               <password>mysql</password>
+               <autocommit>true</autocommit>
+               <srcFiles>
+                  <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_products.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/product_data.sql</srcFile>
+               </srcFiles>
+            </configuration>
+         </plugin>      
+      </plugins>
+   </build>
+
 </project>
