fixing incorrect cargo dependency
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13682 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -143,7 +143,6 @@
          </activation>
          <properties>
             <continuous.integration.resources.dir>${basedir}/../resources/continuous-integration/acceptance</continuous.integration.resources.dir>
-            <database.properties.file>${continuous.integration.resources.dir}/jdbc.local.properties</database.properties.file>
             <tomcat.container.url>file:///home/hudson/arc/apache-tomcat-${tomcat.version}.zip</tomcat.container.url>
          </properties>
          <build>
@@ -164,7 +163,7 @@
                      <container>
                         <dependencies>
                            <dependency>
-                              <location>${database.properties.file}</location>
+                              <location>${continuous.integration.resources.dir}</location>
                            </dependency>
                         </dependencies>                  
                      </container>
