--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -143,6 +143,7 @@
          </activation>
          <properties>
             <continuous.integration.resources.dir>${basedir}/../resources/continuous-integration/acceptance</continuous.integration.resources.dir>
+            <database.properties.file>${continuous.integration.resources.dir}/jdbc.local.properties</database.properties.file>
             <tomcat.container.url>file:///home/hudson/arc/apache-tomcat-${tomcat.version}.zip</tomcat.container.url>
          </properties>
          <build>
