moved database.properties.file to base pom.xml - it's needed by both testing and application now.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13685 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,10 @@
      <module>testing</module>
    </modules>
 
+   <properties>
+      <database.properties.file>${basedir}/../application/src/main/resources/jdbc.properties</database.properties.file>
+   </properties>
+
    <build>
       <resources>
          <resource>
