--- a/application/pom.xml
+++ b/application/pom.xml
@@ -121,34 +121,14 @@
          <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>javax.servlet</groupId>
-         <artifactId>jstl</artifactId>
-         <version>1.2</version>
-      </dependency>
-      <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.4</version>
-      </dependency>
-      <dependency>
          <groupId>joda-time</groupId>
          <artifactId>joda-time</artifactId>
          <version>1.5.2</version>
       </dependency>
       <dependency>
-         <groupId>commons-dbcp</groupId>
-         <artifactId>commons-dbcp</artifactId>
-         <version>1.2.2</version>
-      </dependency>
-      <dependency>
          <groupId>commons-logging</groupId>
          <artifactId>commons-logging</artifactId>
          <version>1.1.1</version>
-      </dependency>
-      <dependency>
-         <groupId>commons-pool</groupId>
-         <artifactId>commons-pool</artifactId>
-         <version>1.4</version>
       </dependency>
       <dependency>
          <groupId>org.aspectj</groupId>
@@ -161,19 +141,19 @@
          <version>5.1.6</version>
       </dependency>
       <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>5.1.6</version>
-      </dependency>
-      <dependency>
          <groupId>findbugs</groupId>
          <artifactId>annotations</artifactId>
          <version>1.0.0</version>
       </dependency>
       <dependency>
-      	<groupId>org.hibernate</groupId>
-      	<artifactId>hibernate-entitymanager</artifactId>
-      	<version>3.3.2.GA</version>
+         <groupId>org.hibernate</groupId>
+         <artifactId>ejb3-persistence</artifactId>
+         <version>1.0.1.GA</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate</groupId>
+         <artifactId>hibernate-entitymanager</artifactId>
+         <version>3.3.2.GA</version>
       </dependency>
       <dependency>
       	<groupId>javax.persistence</groupId>
