added dependencies for spring modules bean validation framework; added a work in progress test at the service level for it; still work in progress
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13706 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -59,6 +59,12 @@
          <url>http://download.java.net/maven/2/</url>
          <layout>default</layout>
       </repository>
+      <repository>
+         <id>ibiblio-maven2-repository</id>
+         <name>Ibiblio maven2 repository</name>
+         <url>http://mirrors.ibiblio.org/pub/mirrors/maven2/</url>
+         <layout>default</layout>
+      </repository>
    </repositories>
    <pluginRepositories>
       <pluginRepository>
@@ -160,6 +166,11 @@
       	<artifactId>persistence-api</artifactId>
       	<version>1.0</version>
       </dependency>
+      <dependency>
+          <groupId>org.springmodules</groupId>
+          <artifactId>spring-modules-validation</artifactId>
+          <version>0.8</version>
+      </dependency>       
    </dependencies>
    <build>
       <finalName>mifos</finalName>
