moving log level to INFO (was set mistakenly to DEBUG); added edge cast tests to BasicClientService
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13725 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/log4j.properties
+++ b/application/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # to turn on debugging, uncomment the DEBUG line, and comment out the INFO line.
-log4j.rootLogger=DEBUG, stdout, logfile
-#log4j.rootLogger=INFO, stdout, logfile
+#log4j.rootLogger=DEBUG, stdout, logfile
+log4j.rootLogger=INFO, stdout, logfile
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
