attempting to unbreak eclipse build; various PMD fixes; ClientForm now validates date of birth; null date validation still to do.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13730 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>cheetah</name>
+	<name>mifos-cheetah</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -59,11 +59,6 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
-		<buildCommand>
-			<name>net.sourceforge.pmd.runtime.pmdBuilder</name>
-			<arguments>
-			</arguments>
-		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
@@ -73,6 +68,5 @@
 		<nature>org.eclipse.jem.workbench.JavaEMFNature</nature>
 		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 		<nature>edu.umd.cs.findbugs.plugin.eclipse.findbugsNature</nature>
-		<nature>net.sourceforge.pmd.runtime.pmdNature</nature>
 	</natures>
 </projectDescription>
