Partial progress on story 679 -- started implementing unit testing of validation on class LoanProductDTO
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13738 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -2,3 +2,9 @@ Client.firstName[not.blank]=Please enter your first name.
 Client.firstName[length]=Please enter no more than {2} characters.
 Client.lastName[not.blank]=Please enter your last name.
 Client.lastName[length]=Please enter no more than {2} characters.
+LoanProductDTO.longName[not.blank]=Please enter a long name.
+LoanProductDTO.shortName[not.blank]=Please enter a short name.
+LoanProductDTO.minInterestRate[not.null]=Please enter the minimum annual interest rate
+LoanProductDTO.minInterestRate[min]=The minimum interest rate must be at least {1}
+LoanProductDTO.maxInterestRate[not.null]=Please enter the maximum annual interest rate
+LoanProductDTO.maxInterestRate[min]=The maximum interest rate must be at least {1}
