--- a/application/src/main/resources/log4j.properties
+++ b/application/src/main/resources/log4j.properties
@@ -2,6 +2,8 @@
 #log4j.rootLogger=DEBUG, stdout, logfile
 log4j.rootLogger=INFO, stdout, logfile
 
+#log4j.logger.org.mifos=DEBUG
+
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
