--- a/application/pom.xml
+++ b/application/pom.xml
@@ -170,6 +170,11 @@
           <groupId>org.springmodules</groupId>
           <artifactId>spring-modules-validation</artifactId>
           <version>0.8</version>
+      </dependency>
+      <dependency>
+      	<groupId>net.sf.dozer</groupId>
+      	<artifactId>dozer</artifactId>
+      	<version>4.2.1</version>
       </dependency>       
    </dependencies>
    <build>
