--- a/application/pom.xml
+++ b/application/pom.xml
@@ -166,6 +166,11 @@
       	<artifactId>persistence-api</artifactId>
       	<version>1.0</version>
       </dependency>
+	  <dependency>
+		<groupId>commons-lang</groupId>
+		<artifactId>commons-lang</artifactId>
+		<version>2.3</version>
+	  </dependency>
       <dependency>
           <groupId>org.springmodules</groupId>
           <artifactId>spring-modules-validation</artifactId>
