Reshuffling PMD config to get it working in eclipse: * "pmd.xml" has been renamed ".ruleset" * eclipse config and the maven pom now use .ruleset * some code cleanup to reduce PMD warnings issued in eclipse.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13771 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -235,7 +235,7 @@
             <version>2.4</version>
             <configuration>
                <rulesets>
-                  <ruleset>${basedir}/../pmd.xml</ruleset>
+                  <ruleset>${basedir}/../.ruleset</ruleset>
                </rulesets>
             </configuration>
             <executions>
