Initial DB based StandardLoanDaoTest integration test. Cleaned up outdated sql from the spike. Added integrationTestContext.xml -- probably needs cleaning, but want to get a working snapshot committed.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13791 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -70,10 +70,9 @@
                <autocommit>true</autocommit>
                <srcFiles>
                   <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
-                  <srcFile>${project.build.outputDirectory}/sql/create_products.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>
                   <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
                   <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
-                  <srcFile>${project.build.outputDirectory}/sql/product_data.sql</srcFile>
                </srcFiles>
             </configuration>
          </plugin>      
