End-to-end execution of story 678
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13793 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -2,9 +2,9 @@ ClientDto.firstName[not.blank]=Please enter your first name.
 ClientDto.firstName[length]=Please enter no more than {2} characters.
 ClientDto.lastName[not.blank]=Please enter your last name.
 ClientDto.lastName[length]=Please enter no more than {2} characters.
-LoanProductDto.longName[not.blank]=Please enter a long name.
-LoanProductDto.shortName[not.blank]=Please enter a short name.
-LoanProductDto.minInterestRate[not.null]=Please enter the minimum annual interest rate
-LoanProductDto.minInterestRate[min]=The minimum interest rate must be at least {1}
-LoanProductDto.maxInterestRate[not.null]=Please enter the maximum annual interest rate
-LoanProductDto.maxInterestRate[min]=The maximum interest rate must be at least {1}
+LoanProductFormBean.longName[not.blank]=Please enter a long name.
+LoanProductFormBean.shortName[not.blank]=Please enter a short name.
+LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual interest rate
+LoanProductFormBean.minInterestRate[min]=The minimum interest rate must be at least {1}
+LoanProductFormBean.maxInterestRate[not.null]=Please enter the maximum annual interest rate
+LoanProductFormBean.maxInterestRate[min]=The maximum interest rate must be at least {1}
