fixing broken path to jdbc.local.properties, causing it to be ignored
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13797 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -28,8 +28,8 @@
             <activeByDefault>false</activeByDefault>
          </activation>
          <properties>
-            <continuous.integration.resources.dir>${basedir}/../resources/continuous-integration</continuous.integration.resources.dir>
-            <database.properties.file>${continuous.integration.resources.dir}/integration/jdbc.local.properties</database.properties.file>
+            <continuous.integration.resources.dir>${basedir}/../resources/continuous-integration/integration</continuous.integration.resources.dir>
+            <database.properties.file>${continuous.integration.resources.dir}/jdbc.local.properties</database.properties.file>
          </properties>
          <build>
             <plugins>
