Initial work with acceptance tests passing for loan creation.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13802 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -8,3 +8,9 @@ LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual in
 LoanProductFormBean.minInterestRate[min]=The minimum interest rate must be at least {1}
 LoanProductFormBean.maxInterestRate[not.null]=Please enter the maximum annual interest rate
 LoanProductFormBean.maxInterestRate[min]=The maximum interest rate must be at least {1}
+LoanDto.interestRate[min]=The minimum interest rate must be at least {1}
+LoanDto.interestRate[not.null]=Please enter an interest rate
+LoanDto.amount[min]=The minimum interest rate must be at least {1}
+LoanDto.amount[not.null]=Please enter a loan amount
+LoanDto.loanProductId[not.null]=Please enter a loan product id
+
