CHEETAH: Incremental progress on story 678: Added error messages to the create-loan-product page
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13803 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -4,10 +4,11 @@ ClientDto.lastName[not.blank]=Please enter your last name.
 ClientDto.lastName[length]=Please enter no more than {2} characters.
 LoanProductFormBean.longName[not.blank]=Please enter a long name.
 LoanProductFormBean.shortName[not.blank]=Please enter a short name.
-LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual interest rate
-LoanProductFormBean.minInterestRate[min]=The minimum interest rate must be at least {1}
-LoanProductFormBean.maxInterestRate[not.null]=Please enter the maximum annual interest rate
-LoanProductFormBean.maxInterestRate[min]=The maximum interest rate must be at least {1}
+LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual interest rate.
+LoanProductFormBean.minInterestRate[min]=The minimum interest rate must be at least {1}.
+LoanProductFormBean.maxInterestRate[not.null]=Please enter the maximum annual interest rate.
+LoanProductFormBean.maxInterestRate[min]=The maximum interest rate must be at least {1}.
+LoanProductFormBean.minInterestRate[expression]=The minimum interest rate cannot exceed the maximum interest rate.
 LoanDto.interestRate[min]=The minimum interest rate must be at least {1}
 LoanDto.interestRate[not.null]=Please enter an interest rate
 LoanDto.amount[min]=The minimum interest rate must be at least {1}
