Added clientId to loans to associate a loan with a client. Removed productId field from the loan creation UI. Test refactoring to standardize on TestNG asserts.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13806 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -14,4 +14,4 @@ LoanDto.interestRate[not.null]=Please enter an interest rate
 LoanDto.amount[min]=The minimum interest rate must be at least {1}
 LoanDto.amount[not.null]=Please enter a loan amount
 LoanDto.loanProductId[not.null]=Please enter a loan product id
-
+LoanDto.clientId[not.null]=Please enter a client id
