Including create_loans.sql script again.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13811 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                <autocommit>true</autocommit>
                <srcFiles>
                   <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
-<!--                   <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>  -->
+                  <srcFile>${project.build.outputDirectory}/sql/create_loans.sql</srcFile>
                   <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
                   <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
                   <srcFile>${project.build.outputDirectory}/sql/create_clients.sql</srcFile>
