--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -266,6 +266,11 @@
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.6</version>
       </dependency>
+      <dependency>
+         <groupId>joda-time</groupId>
+         <artifactId>joda-time</artifactId>
+         <version>1.5.2</version>
+      </dependency>      
    </dependencies>
    <build>
       <finalName>cheetah-testing</finalName>
