--- a/application/pom.xml
+++ b/application/pom.xml
@@ -287,7 +287,7 @@
                <sourceEncoding>utf-8</sourceEncoding>
                <targetJdk>1.6</targetJdk>
                <rulesets>
-                  <ruleset>${basedir}/../pmd.xml</ruleset>
+                  <ruleset>${basedir}/../.ruleset</ruleset>
                </rulesets>
             </configuration>
          </plugin>
@@ -295,6 +295,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
+         <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>jdepend-maven-plugin</artifactId>
+         </plugin>         
       </plugins>
    </reporting>
 </project>
