renamed JpaClientDao to StandardClientDao; updated ClientController to use DateTimeEditor to convert Joda DateTime objects
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13822 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -2,6 +2,7 @@ ClientDto.firstName[not.blank]=Please enter your first name.
 ClientDto.firstName[length]=Please enter no more than {2} characters.
 ClientDto.lastName[not.blank]=Please enter your last name.
 ClientDto.lastName[length]=Please enter no more than {2} characters.
+ClientDto.dateOfBirth[not.null]=Please enter a valid date of birth.
 LoanProductFormBean.longName[not.blank]=Please enter a long name.
 LoanProductFormBean.shortName[not.blank]=Please enter a short name.
 LoanProductFormBean.minInterestRate[not.null]=Please enter the minimum annual interest rate.
