--- a/application/src/main/resources/errors.properties
+++ b/application/src/main/resources/errors.properties
@@ -10,9 +10,10 @@ LoanProductFormBean.minInterestRate[min]=Minimum interest rate must be 0 or more
 LoanProductFormBean.maxInterestRate[not.null]=Please enter the maximum annual interest rate.
 LoanProductFormBean.maxInterestRate[min]=Maximum interest rate must be 0 or more.
 LoanProductFormBean.minInterestRate[expression]=The minimum interest rate cannot exceed the maximum interest rate.
-LoanDto.interestRate[min]=The minimum interest rate must be at least {1}
 LoanDto.interestRate[not.null]=Please enter an interest rate
 LoanDto.amount[min]=The minimum interest rate must be at least {1}
 LoanDto.amount[not.null]=Please enter a loan amount
 LoanDto.loanProductId[not.null]=Please enter a loan product id
 LoanDto.clientId[not.null]=Please enter a client id
+LoanDto.interestRateIsTooHigh=Please enter an interest rate less than or equal to the maximum of {0} allowed by the loan product.
+LoanDto.interestRateIsTooLow=Please enter an interest rate greater than or equal to the minimum of {0} allowed by loan product.
