binding sql:execute to integration-test phase.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13835 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
                   <srcFile>${project.build.outputDirectory}/sql/create_clients.sql</srcFile>
                </srcFiles>
             </configuration>
+            <executions>
+              <execution>
+                <phase>integration-test</phase>
+                <goals>
+                  <goal>execute</goal>
+                </goals>
+              </execution>
+            </executions>
          </plugin>      
       </plugins>
    </build>
