--- a/application/src/main/resources/log4j.properties
+++ b/application/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # to turn on debugging, uncomment the DEBUG line, and comment out the INFO line.
-#log4j.rootLogger=DEBUG, stdout, logfile
-log4j.rootLogger=INFO, stdout, logfile
+log4j.rootLogger=DEBUG, stdout, logfile
+#log4j.rootLogger=INFO, stdout, logfile
 
 #log4j.logger.org.mifos=DEBUG
 
