--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,24 @@
    <properties>
       <database.properties.file>${basedir}/../application/src/main/resources/jdbc.properties</database.properties.file>
    </properties>
+   
+   <dependencies>
+      <dependency>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-aop</artifactId>
+         <version>2.5.5</version>
+      </dependency>
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjrt</artifactId>
+          <version>1.5.4</version>
+      </dependency> 
+      <dependency>
+          <groupId>org.aspectj</groupId>
+          <artifactId>aspectjweaver</artifactId>
+          <version>1.5.4</version>
+      </dependency> 
+   </dependencies>
 
    <build>
       <resources>
