--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -270,6 +270,11 @@
          <groupId>joda-time</groupId>
          <artifactId>joda-time</artifactId>
          <version>1.5.2</version>
+      </dependency>
+      <dependency>
+          <groupId>org.dbunit</groupId>
+          <artifactId>dbunit</artifactId>
+          <version>2.3.0</version>
       </dependency>      
    </dependencies>
    <build>
