--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
           <artifactId>aspectjweaver</artifactId>
           <version>1.5.4</version>
       </dependency> 
+      <dependency>
+          <groupId>org.dbunit</groupId>
+          <artifactId>dbunit</artifactId>
+          <version>2.3.0</version>
+      </dependency>   
    </dependencies>
 
    <build>
