--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
    <url>http://www.mifos.org</url>
     
    <modules>
+     <module>testFramework</module>
      <module>application</module>
      <module>testing</module>
    </modules>
@@ -19,6 +20,10 @@
    
    <dependencies>
       <dependency>
+         <groupId>org.mifos</groupId>
+         <artifactId>cheetahTestFramework</artifactId>
+         <version>0.0.3-SNAPSHOT</version>
+      </dependency>      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-aop</artifactId>
          <version>2.5.5</version>
