binding integration tests to integration-test phase in application/
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13861 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testFramework/pom.xml
+++ b/testFramework/pom.xml
@@ -187,7 +187,7 @@
             <version>2.4.2</version>
             <configuration>         
                <includedGroups>unit, integration</includedGroups>
-               <excludedGroups>workInProgress, ui</excludedGroups>
+               <excludedGroups>workInProgress</excludedGroups>
             </configuration>
          </plugin>
          <plugin>
