--- a/application/pom.xml
+++ b/application/pom.xml
@@ -220,10 +220,22 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.4.2</version>
-            <configuration>         
-               <includedGroups>unit, integration</includedGroups>
-               <excludedGroups>workInProgress, ui</excludedGroups>
+            <configuration>
+               <includedGroups>unit</includedGroups>
+               <excludedGroups>integration, workInProgress</excludedGroups>
             </configuration>
+            <executions>
+               <execution>
+                  <phase>integration-test</phase>
+                  <goals>
+                     <goal>test</goal>
+                  </goals>
+                  <configuration>
+                     <includedGroups>integration</includedGroups>
+                     <excludedGroups>unit, workInProgress</excludedGroups>
+                  </configuration>
+               </execution>
+            </executions>
          </plugin>
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
